# data-science-portfolio-taskmemo

./: .gitignore  README.md  README_cafe.md  main.py  meta.md  multiple_linear_regression.ipynb  notes.md  pyproject.toml
src/: regression_analysis.ipynb
src/api/: google_maps.py
src/app/: app.py
src/dspy/: modules.py  run_demo.py  signatures.py  sigunatures.py
src/llm/: local_llm.py
src/utils/: cache_manager.py
study/taxi_trajectory/: taxi_trajectory.ipynb
