[project]
name = "data-science-portfolio-taskmemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.3",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "typing>=3.10.0.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.1.1",
]
